--- a/user/mods/Punisher/package.json
+++ b/user/mods/Punisher/package.json
@@ -1,29 +1,23 @@
 {
     "name": "Punisher",
-    "version": "1.2.0",
+    "version": "1.0.1",
     "main": "src/mod.js",
     "license": "MIT",
     "author": "dyeness",
-    "sptVersion": "~3.9",
-    "loadAfter": [
-        "Virtual's Custom Quest Loader"
-    ],
-    "incompatibilities": [],
-    "contributors": [],
+    "sptVersion": "3.9",
     "scripts": {
         "setup": "npm i",
-        "build": "node ./build.mjs",
-        "buildinfo": "node ./build.mjs --verbose"
+        "build": "node ./packageBuild.ts"
     },
     "devDependencies": {
-        "@types/node": "20.11",
-        "@typescript-eslint/eslint-plugin": "7.2",
-        "@typescript-eslint/parser": "7.2",
+        "@types/node": "16.18.10",
+        "@typescript-eslint/eslint-plugin": "5.46.1",
+        "@typescript-eslint/parser": "5.46.1",
         "bestzip": "2.2.1",
-        "eslint": "8.24.0",
-        "fs-extra": "10.1.0",
+        "eslint": "8.30.0",
+        "fs-extra": "11.1.0",
         "glob": "8.0.3",
         "tsyringe": "4.7.0",
-        "typescript": "4.8.4"
+        "typescript": "4.9.4"
     }
 }
